LU-6163 kernel: use do_div64() for 64 bit divides

For 32 bit platforms to perform 64 bit divides or modulo
operations the do_div64() macro has to used to avoid the
__umoddi missing errors. Those errors prevent lustre from
working properly on 32 bit machines. The fix for o2iblnd
is a backport of upstream kernel commit:

Linux-commit: 5f43264c5320624f3b458c5794f37220c4fc2934

Change-Id: Iee44fb707ef11be5e484989f0455951e2c84ceb5
Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Signed-off-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-on: http://review.whamcloud.com/18819
Tested-by: Jenkins
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>